apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@apollo_otlp_promotion.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
telemetry:
  apollo:
    otlp_endpoint: "https://custom.example.com/otlp"
    otlp_tracing_protocol: grpc
    otlp_metrics_protocol: http
