apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@apollo_subgraph_metrics.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
snapshot_kind: text
---
---
telemetry:
  apollo:
    preview_subgraph_metrics: true
