apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@batching.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
batching:
  enabled: true
  mode: batch_http_link
