apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@cache_metrics_instrument.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
telemetry:
  instrumentation:
    instruments:
      cache:
        apollo.router.response.cache:
          attributes:
            graphql.type.name: true
            subgraph.name:
              subgraph_name: true
            supergraph.operation.name:
              supergraph_operation_name: string
