apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@coprocessor_context_boolean.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
coprocessor:
  url: "http://example.com"
  router:
    request:
      context: all
    response:
      context: none
  supergraph:
    request:
      context: all
  subgraph:
    all:
      request:
        context: none
  connector:
    all:
      request:
        context: all
