apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__upgrade_old_configuration@cors_no_origins.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
expression: new_config
---
---
cors:
  allow_credentials: true
  methods:
    - GET
    - POST
